# automation-service

./: .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  actions-service.cabal  automation-service.cabal  cabal.project  cabal.project.local  compose.yaml  config.dhall  flake.nix  hie.yaml  index.html  package-lock.json  package.json  test.nix
.github/workflows/: main.yml
allure-action/clear-automation-subscriptions-when-automation-is-stopped/: data.json
allure-action/clear-automation-subscriptions-when-automation-is-stopped/backend-tests/: data.json  lastRun.json
allure-action/clear-automation-subscriptions-when-automation-is-stopped/backend-tests/17883122907_1758391685020/: index.html
allure-action/clear-automation-subscriptions-when-automation-is-stopped/backend-tests/17883213458_1758392174341/: index.html
allure-action/clear-automation-subscriptions-when-automation-is-stopped/backend-tests/17884869353_1758402750214/: index.html
allure-action/clear-automation-subscriptions-when-automation-is-stopped/backend-tests/17887634214_1758420632766/: index.html
allure-action/clear-automation-subscriptions-when-automation-is-stopped/backend-tests/17888066316_1758423455038/: index.html
allure-action/clear-automation-subscriptions-when-automation-is-stopped/backend-tests/17888105365_1758423704409/: index.html
allure-action/clear-automation-subscriptions-when-automation-is-stopped/backend-tests/17888166137_1758424061378/: index.html
allure-action/clear-automation-subscriptions-when-automation-is-stopped/backend-tests/17888263693_1758424692820/: index.html
allure-action/clear-automation-subscriptions-when-automation-is-stopped/backend-tests/17888305172_1758424941921/: index.html
allure-action/clear-automation-subscriptions-when-automation-is-stopped/backend-tests/17888609659_1758426838523/: index.html
allure-action/clear-automation-subscriptions-when-automation-is-stopped/backend-tests/17888625250_1758426932862/: index.html
allure-action/clear-automation-subscriptions-when-automation-is-stopped/frontend-tests/: data.json  lastRun.json
allure-action/fix-broken-cleanup-in-daemon-stop/backend-tests/: data.json  lastRun.json
allure-action/fix-broken-cleanup-in-daemon-stop/frontend-tests/: data.json  lastRun.json
allure-action/fix-ui-HTTP-automation-name-hardcoded-port-in-mqtt-subscribe/backend-tests/: data.json  lastRun.json
allure-action/fix-ui-HTTP-automation-name-hardcoded-port-in-mqtt-subscribe/frontend-tests/: data.json  lastRun.json
allure-action/generate-index-page-for-allure-test-runs/backend-tests/: data.json  lastRun.json
allure-action/generate-index-page-for-allure-test-runs/frontend-tests/: data.json  lastRun.json
allure-action/groups-ui/backend-tests/: data.json  lastRun.json
allure-action/groups-ui/frontend-tests/: data.json  lastRun.json
allure-action/main/backend-tests/: data.json  lastRun.json
allure-action/main/frontend-tests/: data.json  lastRun.json
allure-action/whoops-I-broke-test-run-links/backend-tests/: data.json  lastRun.json
allure-action/whoops-I-broke-test-run-links/frontend-tests/: data.json  lastRun.json
app/: Main.hs
config/: BrokerConfig.dhall  Config.dhall  DeviceConfig.dhall  config.dhall
config/lib/: BrokerConfig.dhall  Config.dhall  LogLevel.dhall
docs/: allure_report.md  design.md  lua_api.md  using.md
generate-allure-site/: generate-allure-site.cabal
generate-allure-site/app/: Main.hs
homeassistant/config/: configuration.yaml
homeassistant/config/www/: automation-service-card.js
lua-actions/: test.lua
lua-automations/: basementMirrorLight.lua  bedroomRightDance.lua  bmBlink.lua  diningRoomTable.lua  flapJacks.lua  frontDoor.lua  guestBedroomSigne.lua  gymMotionSensor.lua  livingRoomLighting.lua  livingRoomStandingLamp.lua  livingWindowBaseLight.lua  mBedroomTableLampSwitch.lua  sunsetLighting.lua  sunsetLightsOn.lua  test.lua  test.lua~
nix/: backend-junit-report.nix  backend-test.nix  frontend-test.nix
src/Service/: Action.hs  ActionName.hs  Actions.hs  App.hs  Automation.hs  AutomationName.hs  Automations.hs  Daemon.hs  DateHelpers.hs  Device.hs  Env.hs  Group.hs  MQTTClient.hs  StateStore.hs  TimeHelpers.hs  Topic.hs
src/Service/Actions/: Chrizmaz.hs  Gold.hs  LuaScript.hs  Spaz.hs  Trinity.hs
src/Service/App/: Daemon.hs  DaemonState.hs  DeviceMap.hs  Helpers.hs  Logger.hs  ThreadMap.hs
src/Service/Automations/: Chrizmaz.hs  Gold.hs  HAState.hs  HTTP.hs  HTTPDefault.hs  LuaScript.hs  OnLow.hs  StateManager.hs  Trinity.hs
src/Service/Env/: Config.hs
src/Service/MQTT/: Class.hs  Client.hs  Status.hs  Topic.hs  Zigbee2MQTT.hs
src/Service/Messages/: Action.hs  Daemon.hs  GledoptoController.hs  GledoptoGLC007P.hs  Zigbee2MQTT.hs  Zigbee2MQTTDevice.hs
test/: Main.hs  config.dhall  convert-junit-to-allure.mjs
test-runs/: index.html
test/Test/: Helpers.hs
test/Test/Integration/: TestApp.hs  TestApp.hs~
test/fixtures/: devices.json  groups.json  oneday.json  status.json
test/lua-automations/: test.lua  testAgain.lua  testBroken.lua  testDSL.lua  testFOO.lua  testHTTP.lua  testNoLoop.lua  testRegistration.lua  testSendMsg.lua  testSubscribe.lua  testSunEvents.lua
ui/: README.md  index.html  index.js  package-lock.json  package.json  site.webmanifest  spago.dhall  spago.yaml  test.dhall
ui/css/: custom.scss  styles.scss
ui/css/bootstrap-icons-1.11.1/: bootstrap-icons.css
ui/src/: Main.purs
ui/src/AutomationService/: Capabilities.purs  Capability.purs  Device.purs  DeviceMessage.purs  DeviceState.purs  DeviceView.purs  DeviceViewComponents.purs  DeviceViewMessage.purs  Exposes.purs  Group.purs  GroupMessage.purs  GroupView.purs  Helpers.purs  Lighting.purs  Logging.purs  MQTT.purs  Message.purs  ResourceMessage.purs  ResourceView.purs  WebSocket.purs
ui/test/: Main.purs  Runner.purs  convert-mocha-to-allure.mjs  fixtures.json  spago.yaml
ui/test/AutomationService/: Device.purs  Exposes.purs
ui/test/Test/: Main.purs  Runner.purs
ui/test/browser/: index.html  index_module.js
(+3612 files in other folders)
