cabal-version:      3.4
name:               actions-service

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Dave Della Costa
maintainer:         ddellacosta@gmail.com

-- A copyright notice.
-- copyright:
category:           Home Automation
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common shared
  ghc-options:      -Wall
  default-language: GHC2021
  build-depends:
      aeson ^>= 2.0.3.0
    , base ^>= 4.16.3.0
    , bytestring ^>= 0.11.3.1
    , connection ^>= 0.3.1
    , containers ^>= 0.6.5.1
    , dhall ^>= 1.41.1
    , fast-logger ^>= 3.1.1
    , lens ^>= 5.1.1
    , mtl ^>= 2.2.2
    , net-mqtt ^>= 0.8.2.1
    , network-uri ^>= 2.6.4.1
    , random ^>= 1.2.1.1
    , scotty ^>= 0.12
    , text ^>= 1.2.5.0
    , tls ^>= 1.5.8
    -- would like to upgrade ASAP
    -- , tls ^>= 1.6.0
    , transformers ^>= 0.5.6.2
    , unliftio ^>= 0.2.23.0
    , unliftio-core ^>= 0.2.0.1
    , uuid ^>= 1.3.15
    , x509-store ^>= 1.6.9
  default-extensions:
     OverloadedStrings
   , LambdaCase
   , TupleSections

library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:  Service.Action
                  , Service.ActionName
                  -- Add Actions here
                  , Service.Actions.Gold
                  , Service.Actions.Chrizmaz
                  , Service.Actions.Spaz
                  --
                  , Service.App
                  , Service.App.Daemon
                  , Service.App.Helpers
                  , Service.Device
                  , Service.Env
                  , Service.Messages.Action
                  , Service.Messages.GledoptoGLC007P
                  , Service.MQTTClient

executable actions-service
  import:           shared
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    actions-service
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T"
    -Wall

test-suite actions-service-test
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    actions-service
