cabal-version:      3.4
name:               automation-service

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Dave Della Costa
maintainer:         ddellacosta@gmail.com

-- A copyright notice.
-- copyright:
category:           Home Automation
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common shared
  ghc-options:      -Wall
  default-language: GHC2021

  build-depends:
      aeson ^>= 2.0.3.0
    , base ^>= 4.16.3.0
    , bytestring ^>= 0.11.3.1
    , connection ^>= 0.3.1
    , containers ^>= 0.6.5.1
    , cron ^>= 0.7.0
    , dhall ^>= 1.41.1
    , fast-logger ^>= 3.1.1
    , hslua ^>= 2.2.1
    , hslua-marshalling ^>= 2.2.1
    , hslua-packaging ^>= 2.2.1
    , lens ^>= 5.1.1
    , lens-aeson ^>= 1.2.2
    , mtl ^>= 2.2.2
    , net-mqtt ^>= 0.8.2.1
    , network-uri ^>= 2.6.4.1
    , pretty-simple
    , random ^>= 1.2.1.1
    , retry ^>= 0.9.3.0
    , safe ^>= 0.3.19
    , scotty ^>= 0.12
    , text ^>= 1.2.5.0
    , tls ^>= 1.5.8
    -- would like to upgrade ASAP
    -- , tls ^>= 1.6.0
    , transformers ^>= 0.5.6.2
    , unliftio ^>= 0.2.23.0
    , unliftio-core ^>= 0.2.1.0
    , unordered-containers ^>= 0.2.19.1
    , uuid ^>= 1.3.15
    , vector ^>= 0.12.3.1
    , x509-store ^>= 1.6.9

  default-extensions:
      OverloadedStrings
    , DeriveGeneric
    , FunctionalDependencies
    , LambdaCase
    , TupleSections


library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:
      Service.Automation
    , Service.AutomationName
    , Service.Automations
    , Service.Automations.Gold
    , Service.Automations.LuaScript
    , Service.App
    , Service.Daemon
    , Service.Device
    , Service.Group
    , Service.Env
    , Service.Messages.Daemon
    , Service.Messages.GledoptoController
    , Service.Messages.Zigbee2MQTT
    , Service.MQTTClient
    , Service.Topic

executable automation-service
  import:           shared
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    automation-service
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T"
    -Wall

test-suite automation-service-tests
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  -- I added other-modules to get rid of warnings when running cabal
  -- test. The absence of other-modules doesn't seem to prevent it
  -- from running successfully otherwise. Is other-modules really
  -- necessary?
  other-modules:
      Test.Helpers
    , Test.Integration.Service.Daemon
    , Test.Integration.Service.DaemonTestHelpers
    , Test.Unit.Service.Helpers
    , Test.Unit.Service.Device
    , Test.Unit.Service.Messages.Daemon
  build-depends:
      automation-service
    , hspec ^>= 2.9.7
    , QuickCheck ^>= 2.14.2
    , tasty ^>= 1.4.2.3
    , tasty-hspec ^>= 1.2.0.1
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T"
    -Wall
