cabal-version:      3.4
name:               automation-service

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Dave Della Costa
maintainer:         ddellacosta@gmail.com

-- A copyright notice.
-- copyright:
category:           Home Automation
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common shared
  ghc-options:      -Wall
  default-language: GHC2021

  build-depends:
      aeson ^>= 2.1.2.1
    , astro ^>= 0.4.3.0
    , base ^>= 4.18.2.0
    , bytestring ^>= 0.11.5.3
    , bytestring
    , cron ^>= 0.7.1
    , crypton-connection ^>= 0.3.2
    , crypton-x509-store ^>= 1.6.9
    , dhall >= 1.41.1 && < 1.42.2
    , fast-logger ^>= 3.2.2
    , hashable ^>= 1.4.4.0
    , hashable
    , hslua ^>= 2.3.1
    , hslua-aeson ^>= 2.3.1
    , hslua-marshalling ^>= 2.3.1
    , hslua-packaging ^>= 2.3.1
    , http-client ^>= 0.7.17
    , http-client-tls ^>= 0.3.6.3
    , lens ^>= 5.2.3
    , lens-aeson ^>= 1.2.3
    , mtl ^>= 2.3.1
    , net-mqtt ^>= 0.8.6.0
    , network-uri ^>= 2.6.4.2
    , optparse-applicative ^>= 0.18.1.0
    , pretty-simple
    , random ^>= 1.2.1.2
    , retry ^>= 0.9.3.1
    , safe ^>= 0.3.21
    , scotty ^>= 0.20.1
    , sqlite-simple ^>= 0.4.19.0
    , text ^>= 2.0.2
    , time ^>= 1.12.2
    -- v1.6.0 disables SSL3
    , tls ^>= 1.8.0
    , tz ^>= 0.1.3.6
    , unliftio ^>= 0.2.25.0
    , unliftio-core ^>= 0.2.1.0
    , unordered-containers ^>= 0.2.20
    , uuid ^>= 1.3.15
    , vector ^>= 0.13.1.0
    , wai ^>= 3.2.4
    , wai-middleware-static ^>= 0.9.2
    , wai-websockets ^>= 3.0.1.2
    , warp ^>= 3.3.31
    , websockets ^>= 0.12.7.3

  default-extensions:
      DeriveGeneric
    , FunctionalDependencies
    , LambdaCase
    , OverloadedStrings
    , StrictData
    , TupleSections


library
  import:           shared
  hs-source-dirs:   src
  exposed-modules:
      Service.App
    , Service.App.Logger
    , Service.Automation
    , Service.AutomationName
    , Service.Automations
    , Service.Automations.Gold
    , Service.Automations.HTTP
    , Service.Automations.HTTPDefault
    , Service.Automations.LuaScript
    , Service.Automations.StateManager
    , Service.Daemon
    , Service.Device
    , Service.Env
    , Service.Env.Config
    , Service.Group
    , Service.MQTT.Class
    , Service.MQTT.Client
    , Service.MQTT.Messages.Daemon
    , Service.MQTT.Messages.Lighting
    , Service.MQTT.Status
    , Service.MQTT.Topic
    , Service.MQTT.Zigbee2MQTT
    , Service.StateStore
    , Service.TimeHelpers

executable automation-service
  import:           shared
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    automation-service
  ghc-options:
    -threaded
    -eventlog
    -rtsopts
    "-with-rtsopts=-N -T"
    -Wall

test-suite automation-service-tests
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  -- I added other-modules to get rid of warnings when running cabal
  -- test. The absence of other-modules doesn't seem to prevent it
  -- from running successfully otherwise. Is other-modules really
  -- necessary?
  other-modules:
      Test.Helpers
    , Test.Integration.Service.Daemon
    , Test.Integration.Service.DaemonTestHelpers
    , Test.Unit.Service.Device
    , Test.Unit.Service.Group
    , Test.Unit.Service.MQTT.Messages.Daemon
    , Test.Unit.Service.MQTT.Status
    , Test.Unit.Service.TimeHelpers
  build-depends:
      automation-service
    , hspec ^>= 2.11.8
    , tasty ^>= 1.4.3
    , tasty-hspec ^>= 1.2.0.4
    , tasty-test-reporter
  ghc-options:
    --
    -- Turns out the integration tests flake out really badly when I
    -- run this in threaded mode, so skipping for now. Seems like
    -- there may be a few different reasons for this, including
    -- resources leaking across `around` calls somehow?
    --
    -- -threaded
    -- -rtsopts
    -- "-with-rtsopts=-N -T"
    -Wall
